Sort price details based on time